fix spacing on footer when both lists hidden

--- a/styles/site.css
+++ b/styles/site.css
@@ -37,6 +37,7 @@ footer {
   font-size: 0.8em;
   color: hsl(0, 0%, 50%);
   flex-shrink: 0;
+  margin-top: 1em;
 }
 
 .title {
